--- a/src/api/Mekspaaf.csproj
+++ b/src/api/Mekspaaf.csproj
@@ -18,6 +18,9 @@
         WorkingDirectory="../client"/>
   </Target>
   <ItemGroup>
+    <None Update="proxies.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="host.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
